Fix alignment of items in Expenses List

--- a/src/App.css
+++ b/src/App.css
@@ -2,125 +2,3 @@ body {
   background-color: rgb(242, 239, 239);
   font-family: 'Nunito Sans', sans-serif;
 }
-
-button {
-  background-color: aqua;
-}
-
-/* body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(242, 239, 239);
-  font-family: 'Nunito Sans', sans-serif;
-} */
-
-/* .header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
-/* input {
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: 1px solid gray;
-  height: 30px;
-  width: 200px;
-  background-color: #f8dbd390;
-  padding-left: 5px;
-  font-family: 'Nunito Sans', sans-serif;
-} */
-
-/* select {
-  height: 30px;
-  width: 200px;
-  border-radius: 5px;
-  background-color: #b1d1c7ae;
-  font-family: 'Nunito Sans', sans-serif;
-} */
-
-/* .add-expense {
-  display: grid;  
-  grid-template-rows: 50px 50px 50px; 
-  grid-template-columns: auto auto;
-  align-items: center; 
-} */
-
-/* .expense-name-input {
-  display: flex;
-  padding: 10px;
-  justify-content: space-between;
-  background-color: #f3d2caae;
-} */
-
-/* button {
-  height: 30px;
-  width: 50px;
-  border: 1px solid gray ;
-  border-radius: 5px;
-  background-color: #b1d1c7ae;
-  font-family: 'Nunito Sans', sans-serif;
-} */
-
-/* .amount-date-inputs {
-  display: flex;
-  padding: 10px;
-  background-color: #f3d2caae;
-} */
-
-/* .category-payment-inputs {
-  display: flex;
-  padding: 10px;
-  padding-bottom: 25px;
-  padding-top: 25px;
-  justify-content: space-between;
-  background-color: #f3d2caae;
-  box-shadow: 0px 2px 0px rgb(0, 0, 0, 0.1);
-} */
-
-/* .expense-date {
-  padding-top: 2px;
-  margin-left: 25px;
-}
-
-.payment-method {
-  margin-left: 25px;
-  width: 204px;
-  height: 33px;
-}
-
-.expense-category {
-  width: 204px;
-  height: 33px;
-} */
-
-/* .add-expense {
-  justify-content: space-between;
-}
-
-ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  background-color: #b1d1c7ae;
-  margin-top: 0%;
-  align-items: center;
-} */
-
-/* h4 {
-  padding: 10px;
-  background-color: #f3d2caae;
-  margin-bottom: 0%;
-  margin-top: 3%;
-}
-
-li{
-  display: flex;
-  justify-content: flex-start;
-  min-width: 100px;
-  padding-left: 30px;
-} */
-
